test/gpu/native/assertOnFailToGpuize_chplCommNone.good
warning: The prototype GPU support implies --no-checks. This may impact debuggability. To suppress this warning, compile with --no-checks explicitly
assertOnFailToGpuize_chplCommNone.chpl:18: error: Loop containing assertOnGpu() is not eligible for execution on a GPU
assertOnFailToGpuize_chplCommNone.chpl:20: note: call has outer var access
